--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,8 +1,8 @@
 [tool]
 [tool.poetry]
-name = "python-boilerplate"
-version = "0.1.0"
-homepage = "https://github.com/waynerv/python-boilerplate"
+name = "cookiecutter_demo"
+version = "0.0.1"
+homepage = "https://github.com/ngophuty/cookiecutter_demo"
 description = "Skeleton project created by Cookiecutter PyPackage."
 authors = ["Xie Wei <ampedee@gmail.com>"]
 readme = "README.md"
